Fri Jun  6 17:04:56 2008  Akinori MUSHA  <knu@iDaemons.org>

	* win32/win32.h: include ws2tcpip.h. fixed [ruby-Bugs-20528]

	* lib/time.rb (Time.xmlschema): don't use float.  fix
	  http://rubyforge.org/tracker/index.php?func=detail&group_id=426&atid=1698&aid=20504

	* object.c (rb_obj_alloc): RDoc updated.  a patch from Gaston
	  Ramos <ramos.gaston at gmail.com> in [ruby-core:17073].

	* lib/rdoc.rb: massive spelling correction patch from Evan Farrar
	  <evanfarrar at gmail.com> in [ruby-doc:1382] applied.

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_initialize):
	  Add a null check for ssl; submitted by akira yamada
	  in [ruby-dev:34950].

	* ext/openssl/ossl_ssl.c (Init_ossl_ssl): Define OP_NO_TICKET if
	  SSL_OP_NO_TICKET is present; submitted by akira yamada
	  in [ruby-dev:34944].

	* test/openssl/test_ssl.rb (OpenSSL#test_server_session): Add a
	  workaround for the case where OpenSSL is configured with
	  --enable-tlsext; submitted by akira yamada in [ruby-dev:34944].

Fri Jun  6 16:58:23 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (iconv_iconv): fix for length argument and now
	  allows range.  [ruby-core:17092] [ruby-core:17115]

Wed Jun  4 17:22:30 2008  Akinori MUSHA  <knu@iDaemons.org>

	* NEWS: Fix typos and move misplaced entries.
	  NEWS: Somehow optflags and warnflags were not actually included
	  in this release.

Tue Jun  3 19:33:22 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_init_copy): Take care of
	  initialize_copy as well as initialize.

	* test/ruby/test_enumerator.rb: Pull in the test suite for
	  enumerator from trunk.

Tue Jun  3 12:51:57 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_allocate, enumerator_ptr): Properly
	  detect if the object is initialized and raise error when
	  appropriate.
	  (enumerator_initialize): Fix a typo in rdoc. [ruby-core:17052]

Tue Jun  3 10:16:40 2008  Akinori MUSHA  <knu@iDaemons.org>
