@@ -5,21 +5,7 @@ else
   require 'test/unit'
 end
 
-module TestIconv
-  if defined?(::Iconv)
-    def self.testcase(name, &block)
-      const_set(name, klass = Class.new(::Test::Unit::TestCase))
-      klass.name
-      klass.__send__(:include, self)
-      klass.class_eval(&block)
-    end
-  else
-    def self.testcase(name)
-    end
-  end
-end
-
-module TestIconv
+class TestIconv < ::Test::Unit::TestCase
   if defined?(::Encoding) and String.method_defined?(:force_encoding)
     def self.encode(str, enc)
       str.force_encoding(enc)
@@ -28,6 +14,10 @@ module TestIconv
     def self.encode(str, enc)
       str
     end
+  end
+
+  def default_test
+    self.class == TestIconv or super
   end
 
   ASCII = "ascii"
