@@ -1,3 +1,7 @@
+Fri Jun  6 18:25:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/iconv: Tests fixed.
+
 Fri Jun  6 17:04:56 2008  Akinori MUSHA  <knu@iDaemons.org>
 
 	* win32/win32.h: include ws2tcpip.h. fixed [ruby-Bugs-20528]
